tests/parser/good/imports.hel
// @name imports
// @phase parser
// @expect success

import std.io
import math
import foo.bar.baz
