tests/parser/bad/module_no_semicolon.hel
// @name module_no_semicolon
// @phase parser
// @expect error

module foo
